# CircuitSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp  vcpkg.json
assets/: capacitor.psd  capacitorThumb.ai  conductor.psd  currentSourceEU.ai  currentSourceEUThumb.ai  ground.ai  inductor.ai  inductor.psd  inductorThumb.ai  node.psd  resistor.psd  resistorThumb.ai  voltageSource.psd  voltageSourceEU.ai  voltageSourceEUThumb.ai  voltageSourceThumb.ai
include/: acResultsViewer.hpp  acSimulation.hpp  boardBackgroundQuad.hpp  boardElement.hpp  boardLine.hpp  boardLinePlacer.hpp  boardSelection.hpp  boardStorage.hpp  boardview.hpp  component.hpp  config.hpp  connection.hpp  coords.hpp  dcResultsViewer.hpp  dcSimulation.hpp  element.hpp  elementProperty.hpp  elementState.hpp  graphDescriptor.hpp  graphView.hpp  line.hpp  lineQuad.hpp  msdfImage.hpp  msdfQuad.hpp  nodeIndexDisplay.hpp  propertyEditor.hpp  resultsDisplay.hpp  saveData.hpp  simulationType.hpp  topBar.hpp  utils.hpp
include/components/: capacitor.hpp  componentStore.hpp  conductor.hpp  currentSource.hpp  ground.hpp  inductor.hpp  node.hpp  resistor.hpp  voltageSource.hpp
include/property/: floatProperty.hpp  propertyUtils.hpp
include/widgets/: acResultsViewer.hpp  boardElementPlacer.hpp  boardLinePlacer.hpp  boardview.hpp  card.hpp  dcResultsViewer.hpp  graph.hpp  nodeIndexDisplay.hpp  propertyEditor.hpp  resultsCard.hpp  resultsItem.hpp
src/: acResultsViewer.cpp  acSimulation.cpp  boardElement.cpp  boardElementPlacer.cpp  boardLine.cpp  boardLinePlacer.cpp  boardSelection.cpp  boardStorage.cpp  boardview.cpp  card.cpp  componentStore.cpp  dcResultsViewer.cpp  dcSimulation.cpp  graph.cpp  graphDescriptor.cpp  graphView.cpp  msdfImage.cpp  nodeIndexDisplay.cpp  propertyEditor.cpp  resultsCard.cpp  resultsDisplay.cpp  resultsItem.cpp  saveData.cpp  topBar.cpp  utils.cpp
src/property/: floatProperty.cpp
src/shaders/: boardBackground.frag  boardBackground.vert  line.frag  line.vert  msdfQuad.frag  msdfQuad.vert
